Added parallax example

--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
     <title>Planta Solar PR</title>
   </head>
   <body>
-    <div id="home" class="home">
-      <div class="text-vcenter">
-        <h1>Hello World</h1>
-        <h3>This is bootstrap-based layout	</h3>
-      </div>
-    </div>
+    <section data-type="parallax_section" data-speed="10" id="home">
+      <article>
+        <div class="geek"></div>
+        <h2>Pagina: 1</h2>
+      </article>
+    </section>
+    <section data-type="parallax_section" data-speed="10" id="section2">
+      <article>
+        <div class="geek"></div>
+        <h2>Pagina: 2</h2>
+      </article>
+    </section>
+    <section data-type="parallax_section" data-speed="10" id="section3">
+      <article>
+        <div class="geek"></div>
+        <h2>Pagina: 3</h2>
+      </article>
+    </section>
   </body>
 </html>
