Finished Parallax example

--- a/index.html
+++ b/index.html
@@ -24,23 +24,14 @@
     <title>Planta Solar PR</title>
   </head>
   <body>
-    <section data-type="parallax_section" data-speed="10" id="home">
-      <article>
-        <div class="geek"></div>
-        <h2>Pagina: 1</h2>
-      </article>
-    </section>
-    <section data-type="parallax_section" data-speed="10" id="section2">
-      <article>
-        <div class="geek"></div>
-        <h2>Pagina: 2</h2>
-      </article>
-    </section>
-    <section data-type="parallax_section" data-speed="10" id="section3">
-      <article>
-        <div class="geek"></div>
-        <h2>Pagina: 3</h2>
-      </article>
-    </section>
+    <div id="section1" class="parallax">
+      <h3>Section 1</h3>
+    </div>
+    <div id="section2" class="parallax">
+      <h3>Section 2</h3>
+    </div>
+    <div id="section3" class="parallax">
+      <h3>Section 3</h3>
+    </div>
   </body>
 </html>
