--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <title>Planta Solar PR</title>
   </head>
   <body>
-    <div id="section1" class="parallax">
+    <div id="section1" class="white-font parallax">
       <h3>Section 1</h3>
     </div>
-    <div id="section2" class="parallax">
+    <div id="section2" class="container-fluid">
       <h3>Section 2</h3>
     </div>
-    <div id="section3" class="parallax">
+    <div id="section3" class="white-font parallax">
       <h3>Section 3</h3>
     </div>
   </body>
