Fixed fonts and gradient

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   </head>
   <body>
     <div id="section1" class="white-font parallax">
-      <h3>Section 1</h3>
+      <h1>Planta Solar PR</h1>
+      <h2>Diseñamos e Instalamos a tu necesidad</h2>
+      <h3>Miembros de ACONER</h3><img src="../images/aconer.png" alt="">
     </div>
     <div id="section2" class="container-fluid">
       <h3>Section 2</h3>
