--- a/index.html
+++ b/index.html
@@ -68,16 +68,17 @@
       <div class="row text-center">
         <div class="col-xs-12 col-md-3"><i class="fa fa-cogs fa-5x"></i>
           <h4>Experiencia</h4>
+          <p>Sobre 10 años de experiencia en la industria</p>
         </div>
         <div class="col-xs-12 col-md-3"><i class="fa fa-diamond fa-5x"></i>
           <h4>100% Puertorriqueños</h4>
-          <p>Optamos por un Puerto Rico verde</p>
+          <p>Conocemos y entendemos lo que se necesita aqui</p>
         </div>
         <div class="col-xs-12 col-md-3"><i class="fa fa-cog fa-5x"></i>
-          <h4>Diseñamos ee instalamos a su necesidad</h4>
+          <h4>Diseñamos e instalamos a su necesidad</h4>
         </div>
         <div class="col-xs-12 col-md-3"><img src="../images/aconer.png" alt="">
-          <h4>Acreditados por Aconer</h4>
+          <h4>Miembros de ACONER</h4>
         </div>
       </div>
     </div>
